create function to paginate and check path-param
